--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,7 @@
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
-              "e2e/tsconfig.json"
+              "cypress/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -112,10 +112,11 @@
           }
         },
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@cypress/schematic:cypress",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngMeteo:serve"
+            "devServerTarget": "ngMeteo:serve",
+            "watch": true,
+            "headless": false
           },
           "configurations": {
             "production": {
@@ -126,6 +127,24 @@
         "deploy": {
           "builder": "@angular/fire:deploy",
           "options": {}
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "ngMeteo:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngMeteo:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
         }
       }
     }
