--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              "_redirects",
               "src/favicon.ico",
               "src/assets"
             ],
@@ -88,6 +89,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
+              "_redirects",
               "src/favicon.ico",
               "src/assets"
             ],
